<resources>
    <string name="app_name">Household Helper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_schedule">Schedule</string>
    <string name="menu_recipes">Recipes</string>
    <string name="menu_lists">Lists</string>
    <string name="menu_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_lists">Lists</string>
    <string name="title_activity_recipes">Recipes</string>
    <string name="title_recipe_gallery">Gallery</string>
    <string name="title_recipe_book">Recipe Book</string>
    <string name="title_activity_schedule">Schedule</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="recipes_fragment_label">Recipe Book</string>
    <string name="recipe_fragment_label">Recipe</string>


    <string name="title_activity_settings">Settings</string>

    <string name="shopping_list">Shopping List</string>
    <string name="todo_list">ToDo List</string>

    <!-- Settings -->
    <string name="profile_settings_header">Profile</string>
    <string name="name_title">Name</string>
    <string name="birthday_title">Birth Date</string>
    <string name="title_recipes">Recipes</string>
    <string name="title_gallery">Gallery</string>

    <!-- Incidental Strings -->
    <string name="new_med_dialog_1">I take this</string>
    <string name="new_med_dialog_2"> times a </string>
    <string name="new_med_dialog_3">My prescriptions contain</string>
    <string name="new_med_dialog_4">doses</string>
    <string name="new_med_dialog_5">Notify me</string>
    <string name="new_med_dialog_6">days before I run out</string>
    <string name="recipe_1">Recipe Title</string>
    <string name="recipe_2">Touch here to add an image</string>
    <string name="recipe_3">Prep Time:</string>
    <string name="recipe_4"> Minutes</string>
    <string name="recipe_5">Author: </string>
    <string name="recipe_6">Cook Time:</string>
    <string name="recipe_7">Serves: </string>
    <string name="recipe_8">Total Time: </string>
    <string name="recipe_9">15</string>
    <string name="recipe_10">you</string>
    <string name="recipe_11">30</string>
    <string name="recipe_12">2</string>
    <string name="recipe_13">Recipe Title</string>
    <string name="recipe_14">Image of the recipe</string>
    <string name="recipe_15">add category</string>

    <string name="add_list_button_description">add new list button</string>
    <string name="gallery_image_content_description">recipe image</string>

    <string name="welcome_text">Welcome to Household Helper</string>

    <string name="batch_add_text">type here..</string>
    <string name="batch_add_text_1">Also add to Quick Add?</string>
    <string name="batch_add_text_2">Submit</string>
    <string name="batch_add_text_3">Clear</string>
    <string name="batch_add_text_4">Batch Add</string>
    <string name="batch_add_text_5">Quick Add</string>

    <string name="prescription_tracker_header">Prescription Tracker</string>
    <string name="button_text_back">back</string>

    <string name="recipe_name_placeholder">new recipe</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="servings">servings</string>
    <string name="author">author</string>
    <string name="cook_time">cook time</string>

</resources>