<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".recipes.RecipeActivity">

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".recipes.RecipeActivity">

                <TextView
                    android:id="@+id/recipeTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/recipe_1"
                    android:textSize="@dimen/title_small_header_font_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/recipeTitleEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="6dp"
                    android:hint="@string/recipe_13"
                    android:importantForAutofill="no"
                    android:inputType="textNoSuggestions"
                    android:textSize="@dimen/title_small_header_font_size"
                    android:visibility="invisible"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible" />

                <ImageView
                    android:id="@+id/recipePictureImageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="300dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/recipe_14"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recipeTitleTextView"
                    app:srcCompat="@drawable/ic_search" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recipePictureImageView">




                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/prepTimeTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recipe_3"
                            android:textSize="@dimen/title_medium_font_size" />

                        <EditText
                            android:id="@+id/prepTimeEditText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/recipe_9"
                            android:importantForAutofill="no"
                            android:inputType="number"
                            android:minWidth="48dp"
                            android:textSize="@dimen/title_medium_font_size" />

                        <TextView
                            android:id="@+id/prepMinutesTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recipe_4"
                            android:textSize="@dimen/title_medium_font_size" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/cookTimeTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recipe_6"
                            android:textSize="@dimen/title_medium_font_size" />

                        <EditText
                            android:id="@+id/cookTimeEditText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/recipe_11"
                            android:importantForAutofill="no"
                            android:inputType="number"
                            android:minWidth="48dp"
                            android:textSize="@dimen/title_medium_font_size" />

                        <TextView
                            android:id="@+id/cookMinutesTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recipe_4"
                            android:textSize="@dimen/title_medium_font_size" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/totalTimeTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recipe_8"
                            android:textSize="@dimen/title_medium_font_size" />

                        <EditText
                            android:id="@+id/spacerEditText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="30"
                            android:textSize="12sp"
                            android:visibility="invisible" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/authorTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recipe_5"
                            android:textSize="@dimen/title_medium_font_size" />

                        <EditText
                            android:id="@+id/authorEditText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/recipe_10"
                            android:importantForAutofill="no"
                            android:inputType="textPersonName"
                            android:minWidth="48dp"
                            android:textSize="@dimen/title_medium_font_size" />

                        <EditText
                            android:id="@+id/authorEditText2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/recipe_10"
                            android:importantForAutofill="no"
                            android:inputType="textPersonName"
                            android:textSize="@dimen/title_medium_font_size"
                            android:visibility="invisible" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/servingsTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recipe_7"
                            android:textSize="@dimen/title_medium_font_size" />

                        <EditText
                            android:id="@+id/servingsEditText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/recipe_12"
                            android:importantForAutofill="no"
                            android:inputType="number"
                            android:minWidth="48dp"
                            android:textSize="@dimen/title_medium_font_size" />

                        <EditText
                            android:id="@+id/authorEditText3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/recipe_10"
                            android:importantForAutofill="no"
                            android:inputType="textPersonName"
                            android:textSize="@dimen/title_medium_font_size"
                            android:visibility="invisible" />
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/imageInstructionsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:text="@string/recipe_2"
                    android:textSize="@dimen/title_medium_font_size"
                    app:layout_constraintBottom_toBottomOf="@+id/recipePictureImageView"
                    app:layout_constraintEnd_toEndOf="@+id/recipePictureImageView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/recipePictureImageView" />

                <ImageButton
                    android:id="@+id/addToShoppingListButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="add to shopping list"
                    app:layout_constraintBottom_toTopOf="@+id/recipePictureImageView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_local_grocery_store_48" />

                <ImageButton
                    android:id="@+id/rotateImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="rotate recipe image"
                    app:layout_constraintBottom_toTopOf="@+id/recipePictureImageView"
                    app:layout_constraintEnd_toEndOf="@+id/addToShoppingListButton"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_rotate_right_48" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fillViewport="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/ingredientCategoriesRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </androidx.recyclerview.widget.RecyclerView>
                </androidx.core.widget.NestedScrollView>

                <Button
                    android:id="@+id/addIngredientCategoryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="add ingredient category"
                    android:text="@string/recipe_15"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp">

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/instructionCategoriesRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </androidx.recyclerview.widget.RecyclerView>
                </androidx.core.widget.NestedScrollView>

                <Button
                    android:id="@+id/addInstructionCategoryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="add instruction category"
                    android:text="@string/recipe_15"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>