<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/medicineEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="name"
                android:minWidth="160dp"
                android:textSize="@dimen/title_medium_font_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ToggleButton
                android:id="@+id/automaticToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="automatic tracking"
                android:text="ToggleButton"
                android:textOff="Tracked Manually"
                android:textOn="Tracked Automatically"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/medicineEditText" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/prescriptionFrequencyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/new_med_dialog_1"
                android:textSize="@dimen/title_medium_font_size" />

            <NumberPicker
                android:id="@+id/frequencyNumberPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="pills per period" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/new_med_dialog_2"
                android:textSize="@dimen/title_medium_font_size" />

            <NumberPicker
                android:id="@+id/timePeriodNumberPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="period of time" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/prescriptionSizeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/new_med_dialog_3"
                android:textSize="@dimen/title_medium_font_size" />

            <NumberPicker
                android:id="@+id/doseSizeNumberPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="doses per prescription" />

            <TextView
                android:id="@+id/prescriptionSizeTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/new_med_dialog_4"
                android:textSize="@dimen/title_medium_font_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/prescriptionNotifyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_med_dialog_5"
                android:textSize="@dimen/title_medium_font_size" />

            <NumberPicker
                android:id="@+id/daysInAdvanceNumberPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="days in advance" />

            <TextView
                android:id="@+id/prescriptionNotifyTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_med_dialog_6"
                android:textSize="@dimen/title_medium_font_size" />

        </LinearLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        </TableRow>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:text="Set the time of day you would like to be reminded to pick up your prescription"
                android:textSize="@dimen/title_medium_font_size"
                app:layout_constraintEnd_toEndOf="@+id/reminderTimePicker"
                app:layout_constraintStart_toStartOf="@+id/reminderTimePicker"
                app:layout_constraintTop_toTopOf="parent" />

            <TimePicker
                android:id="@+id/reminderTimePicker"
                style="?theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="reminder time"
                android:theme="@style/Theme.HouseholdHelper.LargeFont"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</ScrollView>